--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,27 +1,15 @@
-# Usamos una imagen base que incluye Python y Java JRE/JDK,
-# y usamos la variante "slim" que es más ligera y menos propensa
-# a problemas de manejo de paquetes del sistema.
-FROM eclipse-temurin:17-jdk-jammy
+# /docker/Dockerfile
+# Usamos tu imagen base, que ya tiene Java, Spark y Jupyter
+FROM jupyter/pyspark-notebook:latest
 
-# Instalar las dependencias esenciales de Python
-# La imagen base ya trae una versión de Python, pero nos aseguramos de tener pip.
-RUN apt-get update && \
-    apt-get install -y python3-pip python3-dev build-essential && \
-    rm -rf /var/lib/apt/lists/*
+# Instalar dependencias adicionales si lo necesitas
+COPY requirements.txt /tmp/
+RUN pip install --no-cache-dir -r /tmp/requirements.txt
 
-# Copiar requirements y crear el directorio de la aplicación
-WORKDIR /app
-COPY requirements.txt .
-
-# Instalar dependencias Python (incluye PySpark).
-# Usamos --no-cache-dir para mantener la imagen pequeña.
-RUN pip3 install --no-cache-dir -r requirements.txt
-
-# Configurar el directorio de trabajo para tus scripts/notebooks
-WORKDIR /workspace
-
-# Puertos
-EXPOSE 8888 4040
-
-# Comando para iniciar Jupyter Lab
-CMD ["jupyter", "lab", "--ip=0.0.0.0", "--port=8888", "--no-browser", "--allow-root"]
+# =========================================================
+# MODIFICACIÓN CLAVE: Iniciar Jupyter sin token/contraseña
+# Esto elimina el error '403 Forbidden' y permite acceso directo
+# Nota: La imagen base ya define SPARK_HOME, no necesitamos ajustarlo
+# =========================================================
+# Reemplazar el comando por defecto (CMD) por uno sin token/password
+CMD ["jupyter", "lab", "--ip=0.0.0.0", "--port=8888", "--no-browser", "--allow-root", "--ServerApp.token=''", "--ServerApp.password=''"]
